# codex-mcp

./: .gitignore  Makefile  pyproject.toml
.claude/: settings.local.json
src/: __init__.py  agent.py  browser.py
src/cli/: __init__.py  main.py
